--- a/src/Components/RelatedProducts/Relatedproduct.css
+++ b/src/Components/RelatedProducts/Relatedproduct.css
@@ -4,6 +4,8 @@
     align-items: center;
     gap: 10px;
     margin-bottom: 100px;
+    margin: 20px;
+    padding-left: 75px;
 }
 .relatedproduct h1{
     color: #171717;
@@ -22,5 +24,6 @@
     display: flex;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     margin-top: 50px;
-    gap: 60px;
+    margin: 20px;
+    gap: 40px;
     }
